--- a/HNs_Prog/iCiRC/iCiRC.csproj
+++ b/HNs_Prog/iCiRC/iCiRC.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Point.cs" />
     <Compile Include="ResponseMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SCOriginalGMMTracking.cs" />
+    <Compile Include="SIFrangiGMMTracking.cs" />
     <Compile Include="VesselTracking.cs" />
   </ItemGroup>
   <ItemGroup>
