--- a/HNs_Prog/iCiRC/iCiRC.csproj
+++ b/HNs_Prog/iCiRC/iCiRC.csproj
@@ -67,7 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Filters.cs" />
-    <Compile Include="GaussianModel.cs" />
+    <Compile Include="Tracking\GaussianModel.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="ResponseMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
