--- a/trunk/HNs_Prog/HNs_Prog/HNs_Prog.csproj
+++ b/trunk/HNs_Prog/HNs_Prog/HNs_Prog.csproj
@@ -72,6 +72,7 @@
     <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.DirectX, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -205,6 +206,10 @@
     <ProjectReference Include="..\MathNet_Iridium\Sources\Library\Iridium.csproj">
       <Project>{26FC15DE-EFDA-403A-8284-1E2A4AE8A9D8}</Project>
       <Name>Iridium</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MRF\MRF.vcxproj">
+      <Project>{CA90C7C9-F5FE-4458-AF2E-ECE6D216D897}</Project>
+      <Name>MRF</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
