--- a/HNs_Prog/ManagedMRF/ManagedMRF.vcxproj
+++ b/HNs_Prog/ManagedMRF/ManagedMRF.vcxproj
@@ -54,8 +54,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>UnmanagedMRFd.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
