--- a/trunk/HNs_Prog/iCiRC/iCiRC.csproj
+++ b/trunk/HNs_Prog/iCiRC/iCiRC.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="FFT.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="FrameProcessing.cs" />
     <Compile Include="HomomorphicFilter.cs" />
