--- a/HNs_Prog/iCiRC/iCiRC.csproj
+++ b/HNs_Prog/iCiRC/iCiRC.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Filters.cs" />
     <Compile Include="FrameProcessing.cs" />
     <Compile Include="HomomorphicFilter.cs" />
+    <Compile Include="OpenMPStyleThread.cs" />
     <Compile Include="PerPixelIntensityGMMTracking.cs" />
     <Compile Include="SRGClustering.cs" />
     <Compile Include="Tracking\IVesselnessGMMTracking.cs" />
